--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@ body{
     box-sizing: border-box;
     
 }
+
+a:hover {
+  color: black;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid black;
+}
+
 .event-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -23,7 +30,7 @@ img{
     gap: 7%;
     list-style: none;
     background-color: black;
-    padding: 3% 3% 3% 3%;
+    padding: 3% 3% 1% 3%;
     font-size: 2rem;
 
 }
