--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,25 @@ body{
     
 }
 
-a:hover {
+button:hover {
   color: black;
   background-color: rgb(255, 255, 255);
-  border: 1px solid black;
+  padding: 10px;
+
 }
+
+.category-button {
+  background-color: black;
+  border: none; 
+  padding: 0; 
+  cursor: pointer; 
+  color: white; 
+  font-size: 1.5rem;
+  font-weight: bold;
+
+
+}
+
 
 .event-grid {
     display: grid;
