--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body{
 button:hover {
   color: black;
   background-color: rgb(255, 255, 255);
+  border: solid 1px rgb(255, 255, 255);
   padding: 10px;
 
 }
@@ -44,7 +45,7 @@ img{
     gap: 7%;
     list-style: none;
     background-color: black;
-    padding: 3% 3% 1% 3%;
+    padding: 3% 3% 0.2% 3%;
     font-size: 2rem;
 
 }
