--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,10 @@ button:hover {
   color: black;
   background-color: rgb(255, 255, 255);
   border: solid 1px rgb(255, 255, 255);
-  padding: 10px;
+  padding: 1px;
+  border-radius: 0; 
+  border-top-left-radius: 4%; 
+  border-top-right-radius: 4%; 
 
 }
 
@@ -29,6 +32,7 @@ button:hover {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
   }
+
   .event-item {
     border: 1px solid #ccc;
     padding: 10px;
@@ -45,7 +49,7 @@ img{
     gap: 7%;
     list-style: none;
     background-color: black;
-    padding: 3% 3% 0.2% 3%;
+    padding: 3% 3% 0% 3%;
     font-size: 2rem;
 
 }
