--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ img{
   justify-content: center;
   gap: 7%;
   list-style: none;
-  background-color: black;
+  background-color: rgb(230, 1, 1);
   padding: 3% 3% 0% 3%;
   font-size: 2rem;
 
