--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,15 @@ body{
   border: 2px solid #118ba7;
 }
 
+.changed-mind-button {
+  color: #28b8e3;
+  text-decoration: none;
+  border: none;
+  background: none;
+
+}
+
+
 h3 {
   color: rgba(0, 0, 0, 0.795);
   font-weight: bold;
