--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,10 @@ img{
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 7%;
+  gap: 5%;
   list-style: none;
   background-color: black;
-  padding: 3% 3% 0% 3%;
+  padding: 7% 2% 0% 2%;
   font-size: 2rem;
 
 }
@@ -125,6 +125,56 @@ img{
 .tab-nav a {
   color: white;
   text-decoration: none;
+}
+
+.my-account-link {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  position: absolute;
+  top: 50px;
+  right: 40px;
+  color: white;
+  text-decoration: none;
+}
+
+.my-account-text {
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  text-align: center;
+  font-weight: bold;
+}
+
+.arrow-icon {
+  width: 24px;
+  height: 24px;
+  margin-left: 8px;
+  fill: white;
+}
+
+.back-to-events-link {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  top: 50px;
+  left: 40px;
+  color: white;
+  text-decoration: none;
+}
+
+.back-to-events-link span {
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  font-weight: bold;
+  text-align: center;
+}
+
+.arrowLeft {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+  fill: white;
 }
 
 @media screen and (max-width: 768px) {
